[package]
name = "perg"
version = "0.8.0"
edition = "2021"
authors = ["Vinh Nguyen"]
license = "MIT"
description = "A fast, feature-rich text search tool similar to grep, written in Rust"
readme = "README.md"
homepage = "https://github.com/vinhnx/perg"
repository = "https://github.com/vinhnx/perg"
keywords = ["cli", "search", "grep", "text", "regex"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
console = "0.15"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
